tests/baselines/reference/interfaceExtendingOptionalChain.errors.txt
interfaceExtendingOptionalChain.ts(5,22): error TS2499: An interface can only extend an identifier/qualified-name with optional type arguments.


==== interfaceExtendingOptionalChain.ts (1 errors) ====
    namespace Foo {
        export class Bar {}
    }
    
    interface C1 extends Foo?.Bar {}
                         ~~~~~~~~
!!! error TS2499: An interface can only extend an identifier/qualified-name with optional type arguments.
    